# oram

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: read_write.rs
examples/sgx/: .gitignore  Makefile  README.md
examples/sgx/app/: Cargo.toml  build.rs
examples/sgx/app/src/: main.rs
examples/sgx/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl
examples/sgx/enclave/src/: lib.rs  oram.rs
examples/sgx/rust-sgx-sdk/: README.md
scripts/: check.sh  format.sh  test_leveldb.sh
src/: data.rs  lib.rs  sort.rs
src/db/: leveldb.rs  mod.rs  sgxfs.rs
