[package]
name = "oram"
version = "0.1.2"
authors = ["Advanca Authors"]
edition = "2018"

[features]
# default with std for develpoment
default = ["std"]

# used for conditional compilation in source code
std = [
	"log",
	"rusty-leveldb",
	"blake2",
	"serde",
	"bincode",
]

# usage 1: used for conditional compilication in source code
# usage 2: allow sgx-specific crates to be 'optional' in feature 'std'
# Simply select 'default' feature to include these packages.
sgx = [
	"log_sgx",
	"rusty_leveldb_sgx",
	"blake2_sgx",
	"serde_sgx",
	"serde_derive_sgx",
	"bincode_sgx",
	"sgx_tstd",
	"sgx_rand",
	"protected_fs",
	"hex_sgx",
]

[dependencies]

rand      = { version = "0.7", default-features = false }
rand_core = { version = "0.5", default-features = false }

cfg-if    = "0.1.10"

sgx_tstd          = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"], optional = true }
sgx_rand          = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
protected_fs      = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/protected_fs_rs.git", default-features = false, features = ["mesalock_sgx"], package = "protected_fs_rs", optional = true }

hex_sgx           = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/rust-hex-sgx", package = "hex", optional = true }

log               = { version = "0.4", optional = true }
log_sgx           = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/log-sgx", package = "log", optional = true }

rusty-leveldb     = { version = "0.3.0", optional = true }
rusty_leveldb_sgx = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/rusty_leveldb_sgx", package = "rusty-leveldb", optional = true }

blake2            = { version = "0.8.1", optional = true }
blake2_sgx        = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx", package = "blake2", optional = true }

##XXX: don't add 'rev' or 'tag' for serde_sgx
serde             = { version = "1.0", features = ["derive"], optional = true }
serde_sgx         = { git = "https://github.com/mesalock-linux/serde-sgx", package = "serde", optional = true }
serde_derive_sgx  = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/serde-sgx", package = "serde_derive", optional = true }

bincode           = { version = "1.2.1", optional = true }
bincode_sgx       = { tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/bincode-sgx", package = "bincode", optional = true }


[dev-dependencies]
hex = "0.4.2"
env_logger = "0.7.1"
criterion = "0.3"
serde_test = "1.0"

[[bench]]
name = "read_write"
harness = false

[profile.bench]
debug = true

# enable this when profiling
# [profile.release]
# debug = true

